src/objects/Recruit__c.object
<CustomObject>
    <fields>
        <fullName>Signed_Out_Time__c</fullName>
        <label>Signed Out Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signed_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Up_But_No_Show__c</fullName>
        <formula>IF(CONTAINS(Alt_Last_Name__c, &quot;dummy&quot;), FALSE, IF(AND(AND(TEXT(Recruit_Status__c) = &quot;Signed Up&quot;, Attended__c =FALSE, Volunteer_Date__c &lt; TODAY())), TRUE, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Up_Count__c</fullName>
        <formula>IF(CONTAINS(Alt_Last_Name__c, &quot;dummy&quot;) , 0, IF(TEXT(Recruit_Status__c)=&quot;Signed Up&quot;, 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed-Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signed_Up_Showed_Up_Zero_Credit__c</fullName>
        <formula>IF(CONTAINS(Alt_Last_Name__c, &quot;dummy&quot;), FALSE, IF(AND(AND(AND(TEXT(Recruit_Status__c) = &quot;Signed Up&quot;, Attended__c =TRUE, Volunteer_Date__c &lt; TODAY(), Total_Shift__c =0))), TRUE, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show-No Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(TEXT( Recruit_Status__c) =&quot;Signed Up&quot;, &quot;Commit&quot;,TEXT(Recruit_Status__c)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Shift__c</fullName>
        <formula>IF( Attended__c =TRUE, CASE(  CreditShift__c , &apos;Full&apos;, 1, &apos;Half&apos;, 0.5,0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift Completed</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TueTotShift__c</fullName>
        <formula>IF(   RecruitDay__c =3 , Total_Shift__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TueTotShift</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <description>location + volunter date + shift + recruit name + employer</description>
        <inlineHelpText>Do not touch this; System Generated</inlineHelpText>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Volunteer_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Volunteer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volunteer_Type__c</fullName>
        <label>Volunteer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Banking</fullName>
                    <default>true</default>
                    <label>Phone Banking</label>
                </value>
                <value>
                    <fullName>Precinct Walking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WedTotShift__c</fullName>
        <formula>IF(   RecruitDay__c =4,  Total_Shift__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WedTotShift</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wkly_Goal__c</fullName>
        <formula>IF( Goal__c &gt;0, 24/5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wkly Goal</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Recruit</label>
    <listViews>
        <fullName>Arroyo_Grande_PB_Today</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Arroyo Grande</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Arroyo Grande PB Today</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arroyo_Grande_PB_Tomorrow</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Arroyo Grande</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Arroyo Grande PB Tomorrow</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arroyo_Grande_PB_Yesterday</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Arroyo Grande</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Arroyo Grande PB Yesterday</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bakersfield_PB_Today</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Bakersfield</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Bakersfield PB Today</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bakersfield_PB_Tomorrow</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Bakersfield</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Bakersfield PB Tomorrow</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bakersfield_PB_Yesterday</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Bakersfield</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Bakersfield PB Yesterday</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chico_PB_Today</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Chico</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Chico PB Today</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chico_PB_Tomorrow</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Chico</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Chico PB Tomorrow</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chico_PB_Yesterday</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Chico</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Chico PB Yesteday</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fresno_PB_Today</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Fresno</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Fresno PB Today</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fresno_PB_Tomorrow</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Fresno</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Fresno PB Tomorrow</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fresno_PB_Yesterday</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Fresno</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Fresno PB Yesteday</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lancaster_PB_Today</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Lancaster</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Lancaster PB Today</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lancaster_PB_Tomorrow</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Lancaster</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Lancaster PB Tomorrow</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lancaster_PB_Yesterday</fullName>
        <columns>Recruit_Name__c</columns>
        <columns>Division__c</columns>
        <columns>Recruited_By__c</columns>
        <columns>Status__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Recruit_Agent__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Signed_Out__c</columns>
        <columns>Signed_Out_Time__c</columns>
        <columns>CreditShift__c</columns>
        <columns>Total_Shift__c</columns>
        <columns>Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Volunteer_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Recruit_Status__c</field>
            <operation>equals</operation>
            <value>Signed Up</value>
        </filters>
        <filters>
            <field>Alt_Last_Name__c</field>
            <operation>notContain</operation>
            <value>dummy</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>contains</operation>
            <value>Lancaster</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Lancaster PB Yesterday</label>
        <language>en_US</language>
        <sharedTo>
            <group>PB2018_Full_Access</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Recruit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruits</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Val1</fullName>
        <active>false</active>
        <errorConditionFormula>IF( AND(Division__c =&quot;Community&quot;,TEXT( Location__c )=&quot;Outlying&quot;), False, True)</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Please use Outlying North or South.</errorMessage>
    </validationRules>
</CustomObject>